--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,7 +25,7 @@
     color: #fff;
 }
 
-.logo {
+.header .logo {
     margin-top: 80px;
     margin-left: 80px;
     height: 100px;
@@ -125,6 +125,47 @@
     color: var(--theme-purple);
 }
 
+.footer {
+    height: 175px;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--theme-purple);
+    border-top: #6829b6 solid 5px;
+    color: #fff;
+}
+
+.footer .logo {
+    display: inline;
+    height: 20%;
+    margin: 15px;
+}
+
+.footer .info {
+    height: 30px;
+    width: 300px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 15px;
+}
+
+/* .info span a {
+    height: 30px;
+    width: 30px;
+} */
+
+.info span {
+    height: 40px;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (max-width: 900px) {
     .input-box {
         width: 80%;
@@ -141,7 +182,7 @@
     .header h4 {
         margin-left: 0;
     }
-    .logo {
+    .header .logo {
         margin: 0px 30px 0 !important;
         width: 80%;
     }
